--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "20.11.2",
+    "@types/react": "18.2.48",
+    "typescript": "5.3.3"
   }
 }
